--- a/src/comps/ImageGrid.css
+++ b/src/comps/ImageGrid.css
@@ -20,3 +20,32 @@
   top: 0;
   left: 0;
 }
+
+.remove-image {
+  display: none;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  border-radius: 10em;
+  padding: 2px 6px 3px;
+  text-decoration: none;
+  font: 700 21px/20px sans-serif;
+  background: #555;
+  border: 3px solid #fff;
+  color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5), inset 0 2px 4px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+  -webkit-transition: background 0.5s;
+  transition: background 0.5s;
+}
+.remove-image:hover {
+  background: #e54e4e;
+
+  top: 5px;
+  right: px;
+}
+.remove-image:active {
+  background: #e54e4e;
+  top: 5px;
+  right: 5px;
+}
